--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic Tac Toe</title>
-  <!-- add of css -->
+  <link rel="stylesheet" href="CSS.css">
 </head>
 <body>
   <h1>Tic Tac Toe</h1>
