added simple mechanics

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
       <!-- Reset button -->
   <button id="restartBtn">Restart Game</button>
      <!-- logic yaha lagao-->
+  <script src="simple-mechanics.js"></script>
 </body>
 </html>
