--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     <div class="cell" data-cell></div>
   </div>
 
+  <div>
+    <h4>Scores</h4>
+    <div class="X_score">X: 0</div>
+    <div class="O_score">O: 0</div>
+  </div>
+
       <!-- Reset button -->
   <button id="restartBtn">Restart Game</button>
      <!-- logic yaha lagao-->
